--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "web-audio",
     "template",
     "cross-platform"
-  ],  "repository": {
+  ],
+  "repository": {
     "type": "git",
     "url": "https://github.com/yotayota105/tauri-electronics-template.git"
   },
   "bugs": {
     "url": "https://github.com/yotayota105/tauri-electronics-template/issues"
-  },  "homepage": "https://github.com/yotayota105/tauri-electronics-template#readme",
+  },
+  "homepage": "https://github.com/yotayota105/tauri-electronics-template#readme",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -42,7 +44,8 @@
     "@types/p5": "^1.7.6",
     "@types/three": "^0.177.0",
     "p5": "^2.0.1",
-    "three": "^0.177.0"
+    "three": "^0.177.0",
+    "vexflow": "^5.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
