fix: 認証要件を無効に設定し、アクセスを許可

--- a/public/auth-config.json
+++ b/public/auth-config.json
@@ -1,5 +1,5 @@
 {
-    "authRequired": true,
+    "authRequired": false,
     "controllerPassword": "controller2025",
     "playerPassword": "player2025"
 }
